Fix menu and contents not to overlap.

--- a/src/assets/home.module.scss
+++ b/src/assets/home.module.scss
@@ -18,6 +18,10 @@
   display: inline-block;
 }
 
+.items {
+  padding-bottom: 60px;
+}
+
 .item_title {
   color: $font-color;
   font-weight: normal;
